--- a/chapter2.Rmd
+++ b/chapter2.Rmd
@@ -1,7 +1,7 @@
 ---
 title_meta: 'Chapter 2'
 title: 'Vektori (Vectors)'
-description: 'In this R course, we''ll take you on a trip to Vegas, where you will learn how to analyze your gambling results using vectors in R! After completing this chapter, you will be able to create vectors in R, name them, select elements from them and compare different vectors.'
+description: 'U ovom poglavlju vodimo vas na put u Vegas, gde ćete naučiti kako da analizirate rezultate kockanja korišćenjem vektora u R! Nakon završetka ovog poglavlja moći ćete da kreirate vektore u R, da im dajete nazive, da izdvojite njihove elemente i da poredite različite vektore.'
 ---
 
 ## Create a vector
