--- a/chapter6.Rmd
+++ b/chapter6.Rmd
@@ -1,7 +1,10 @@
 ---
-title_meta: 'Chapter 6'
-title: 'Liste (Lists)'
-description: 'Lists, as opposed to vectors, can hold components of different types, just like your to-do list at home or at work. This intro to R chapter will teach you how to create, name and subset these lists.'
+title_meta: Chapter 6
+title: Liste (Lists)
+description: >-
+  Lists, as opposed to vectors, can hold components of different types, just
+  like your to-do list at home or at work. This intro to R chapter will teach
+  you how to create, name and subset these lists.
 ---
 
 ## Lists, why would you need them?
@@ -10,7 +13,8 @@ description: 'Lists, as opposed to vectors, can hold components of different typ
 type: NormalExercise
 key: 2afcdb6a76ec91bf266de9b2ac295d844d7bb004
 xp: 100
-skills: 1
+skills:
+  - 1
 ```
 
 Congratulations! At this point in the course you are already familiar with:
@@ -55,7 +59,8 @@ success_msg("Ready, set, go! Continue to the next exercise.")
 type: NormalExercise
 key: 68f93c5c504616bd18876da52cd123277d56fc8b
 xp: 100
-skills: 1
+skills:
+  - 1
 ```
 
 A **list** in R is similar to your to-do list at work or school: the different items on that list most likely differ in length, characteristic, and type of activity that has to be done. 
@@ -98,7 +103,8 @@ success_msg("Cool. Let's get our hands dirty!")
 type: NormalExercise
 key: 4beee9cb532c889903218b49b83ab5ef133eac83
 xp: 100
-skills: 1
+skills:
+  - 1
 ```
 
 Let us create our first list! To construct a list you use the function [`list()`](http://www.rdocumentation.org/packages/base/functions/list): 
@@ -169,7 +175,8 @@ success_msg("Wonderful! Head over to the next exercise.")
 type: NormalExercise
 key: 89dd0126568b1ff5a84033c571907a8a282245e4
 xp: 100
-skills: 1
+skills:
+  - 1
 ```
 
 Well done, you're on a roll!
@@ -261,7 +268,8 @@ success_msg("Great! Not only do you know how to construct lists now, you can als
 type: NormalExercise
 key: 19fd17cc792ef870c1558b3a9bae08c1d1e3acae
 xp: 100
-skills: 1
+skills:
+  - 1
 ```
 
 Being a huge movie fan (remember your job at LucasFilms), you decide to start storing information on good movies with the help of lists. 
@@ -326,7 +334,8 @@ success_msg("Wonderful! You now know how to construct and name lists. As in the 
 type: NormalExercise
 key: 1ef3278944562caef64b9927dd2ddb6ee52334cd
 xp: 100
-skills: 1
+skills:
+  - 1
 ```
 
 Your list will often be built out of numerous elements and components. Therefore, getting a single element, multiple elements, or a component out of it is not always straightforward. 
@@ -399,7 +408,8 @@ success_msg("Great! Selecting elements from lists is rather easy isn't it? Conti
 type: NormalExercise
 key: ca3f7b71504ff93940cf65889d406a58c5b0019c
 xp: 100
-skills: 1
+skills:
+  - 1
 ```
 
 Being proud of your first list, you shared it with the members of your movie hobby club. However, one of the senior members, a guy named M. McDowell, noted that you forgot to add the release year. Given your ambitions to become next year's president of the club, you decide to add this information to the list. 
